--- a/src/app/features/character/component/talent/talent.component.css
+++ b/src/app/features/character/component/talent/talent.component.css
@@ -16,7 +16,7 @@
     padding-top: 2px;
 }
 
-:host ::ng-deep .content .mat-expansion-panel{
+:host ::ng-deep .content .mat-expansion-panel.mat-expanded.expand-over{
     overflow: visible;
 }
 
