--- a/src/app/features/character/component/weapon/weapon.component.css
+++ b/src/app/features/character/component/weapon/weapon.component.css
@@ -21,7 +21,7 @@
     padding-top: 2px;
 }
 
-:host ::ng-deep .content .mat-expansion-panel{
+:host ::ng-deep .content .mat-expansion-panel.mat-expanded.expand-over{
     overflow: visible;
 }
 
