Closes #3; Fix artifact team buff display error

--- a/src/app/features/character/component/artifact/artifact.component.html
+++ b/src/app/features/character/component/artifact/artifact.component.html
@@ -53,6 +53,7 @@
                             [skill]="name_set"
                             [skillIndex]="2"
                             [refreshFlg]="setBuffRefreshFlg"
+                            [refreshBuffOnChangeFlg]="true"
                             [valueIndexs]="effectValidIndexs">
                             <br>
                             <br>
