--- a/src/app/features/character/component/team/team.component.css
+++ b/src/app/features/character/component/team/team.component.css
@@ -59,3 +59,9 @@ table {
     margin-left: 1.4em;
     cursor: pointer;
 }
+
+.skill-prefix-name {
+    font-size: 0.9em;
+    padding-right: 0.4em;
+    font-weight: 700;
+}
