--- a/src/app/features/character/component/weapon/weapon.component.html
+++ b/src/app/features/character/component/weapon/weapon.component.html
@@ -102,6 +102,7 @@
                         <app-extra-data
                             [characterIndex]="data.id"
                             [skill]="name_effect"
+                            [refreshBuffOnChangeFlg]="true"
                             [valueIndexs]="effectValidIndexs">
                             <br>
                             <br>
