Add auto calc for DPS and fix some bug

--- a/src/app/features/character/component/artifact-auto/artifact-auto.component.css
+++ b/src/app/features/character/component/artifact-auto/artifact-auto.component.css
@@ -26,6 +26,10 @@ table {
     width: 13em;
 }
 
+.dps-toggle {
+    height: 4em;
+}
+
 .one-line-div {
     overflow: hidden;
     white-space: nowrap;
