Fix auto calc error check

--- a/src/app/features/character/component/artifact-auto/artifact-auto.component.html
+++ b/src/app/features/character/component/artifact-auto/artifact-auto.component.html
@@ -35,7 +35,7 @@
             </td>
         </tr>
         <ng-container *ngFor="let item of inputItems">
-            <tr *ngIf="!userInputHiddenStatus.get(item.name) && (item.isSelect?(userInputList[item.selectListName!].length > 0):true)">
+            <tr *ngIf="!userInputHiddenStatus.get(item.model) && (item.isSelect?(userInputList[item.selectListName!].length > 0):true)">
                 <td class="left">
                     <span [innerText]="'AUTO.' + item.name | translate"></span>
                 </td>
